--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
 <!--     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Railway</title>
+    <meta http-equiv="refresh" content="0; url=https://github.com/aayushYash/try.github.io/blob/main/q19/web/index.html">    
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+<!--     <title>Railway</title> -->
 </head>
+    <body>
+    </body>
+</html>
   
   
